--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,46 @@
      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
+
 </head>
 <body>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-12 jumbotron text-center">
+            <h1>Austin Housing Dashboard</h1>
+            <p>Use the interactive charts below to explore the dataset</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2">
+            <div class="well">
+              <h5>Housing Info:</h5>
+              <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            </div>
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">Demographic Info</h3>
+              </div>
+               <div id="sample-metadata" class="panel-body"></div>
+            </div> 
+          </div>
+          <div class="col-md-5">
+            <div id="plot"></div>
+           </div>
+          <div class="col-md-5">
+            <div id="gauge"></div>
+          </div> 
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div id="bubble"></div>
+          </div>
+        </div> 
+      </div>
+
     <div id="plot"></div>
     <div id="leafletMap"></div>
-    <h1>Austin_Housing_Dashboard</h1>
+    <!-- <h1>Austin_Housing_Dashboard</h1> -->
     <p>Available Routes:</p>
     <ul>
         <li><a href="{{ url_for('annual_sales_data') }}">/api/v1.0/annual_sales_table</a></li>
