--- a/templates/index.html
+++ b/templates/index.html
@@ -24,14 +24,20 @@
           <div class="col-md-2">
             <div class="well">
               <h5>Housing Info:</h5>
-              <select id="selDataset" onchange="optionChanged(this.value)"></select>
+              <!-- <select id="selDataset" onchange="optionChanged(this.value)"></select> -->
+              <input type = "radio", name ="option", id = "annual", class = "ra", onclick="annualOption()"></input>
+              <label for="annual">Annual Sales</label>
+
+              <input type = "radio", name ="option", id = "monthly", class = "rm", onclick="monthlyOption()"></input>
+              <label for="monthly">Monthly Sales</label>
+
             </div>
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <h3 class="panel-title">Demographic Info</h3>
               </div>
                <div id="sample-metadata" class="panel-body"></div>
-            </div> 
+            </div>
           </div>
           <div class="col-md-5">
             <div id="plot_month"></div>
@@ -46,7 +52,7 @@
           </div>
         </div> 
       </div>
-
+      
     <div id="plot"></div>
     <div id="leafletMap"></div>
     <!-- <h1>Austin_Housing_Dashboard</h1> -->
