--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
      <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
-
+     
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
        <!-- start KRP Include  chart.js, double_line js file -->
       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <!-- end KRP Include  chart.js, double_line js file -->
