--- a/templates/index.html
+++ b/templates/index.html
@@ -57,20 +57,25 @@
         </div>
 
         <div class="row">
+          <div class="col-md-12">
+            <div id="bubble"></div>
+          </div>
+        </div>
+
+
+        <div class="row">
           <div class="col-md-2">
             <div class="well">
-              <h5>Housing Info:</h5>
+              <h4>Housing Info:</h4>
               <!-- <select id="selDataset" onchange="optionChanged(this.value)"></select> -->
               <input type = "radio", name ="option", id = "annual", class = "ra", onclick="annualOption()"></input>
-              <label for="annual">Annual Sales</label>
+              <label for="annual">Annual Sales</label><br>
 
               <input type = "radio", name ="option", id = "monthly", class = "rm", onclick="monthlyOption()"></input>
               <label for="monthly">Monthly Sales</label>
 
             </div>
-            <div class="panel panel-primary">
-               <div id="sample-metadata" class="panel-body"></div>
-            </div>
+            
           </div>
           <div class="col-md-5">
             <div id="plot_month"></div>
@@ -79,11 +84,12 @@
             <div id="plot"></div>
           </div> 
         </div>
-        <div class="row">
+        <br>
+        <!--<div class="row">
           <div class="col-md-12">
             <div id="bubble"></div>
           </div>
-        </div> 
+        </div>  -->
       </div>
       
     <div id="plot"></div>
@@ -99,7 +105,8 @@
     <!-- Include the JavaScript file -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="/static/js/script.js"></script>
-    <script type="text/javascript" src="/static/js/script_monthly.js"></script>
+    <!--<script type="text/javascript" src="/static/js/script_monthly.js"></script> -->
+    <script type="text/javascript" src="/static/js/script_bubble.js"></script>
     
         <!-- start KRP Include the JavaScript file AND chart.js, double_line js file -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
