--- a/templates/index.html
+++ b/templates/index.html
@@ -43,6 +43,11 @@
                   text-align: center;
                 }
               </style>-->
+              
+              <center>
+                <h3> Austin Monthly Housing Data: 1990 - 2023 </h3>
+              </center>
+
               <div class="linechart">
                 <canvas id="dubLineChart" style="width: 200px; height: 100px;"></canvas>
                 <button id="SalesVsList">Sales vs Total listings</button>
