--- a/templates/index.html
+++ b/templates/index.html
@@ -41,6 +41,32 @@
             </div>
           </div>
         </div>
+        <br>
+        <br>
+       <div class="row justify-content-center">
+        <div style="width:800px">
+          <table class="table table-striped">
+            <h3>Snap Shot: Percent Increase of Median Home Prices Over Time</h3>
+            <thead>
+              <tr>
+                <th scope="col">1990 - 2023</th>
+                <th scope="col">2000 - 2023</th>
+                <th scope="col">2010 - 2023</th>
+                <th scope="col">2020 - 2023</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>523.3%</th>
+                <th>214.5%</th>
+                <th>138.4%</th>
+                <th>31.7%</th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
         <div class="row">
           <div class="col-md-1"></div>
           <div class="col-md-10">
@@ -68,8 +94,15 @@
       </div>
     </div-->
 
-        <p>Austin Housing Map</p>
-        <a href="/index2.html"> link to our map</a> 
+
+    <!-- attach href to button-->
+   
+    <div>
+      <a href="/index2.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Austin Housing Map</a>
+    </div>
+    <br>
+     <!-- <p>Austin Housing Map</p>
+        <a href="/index2.html"> link to our map</a>-->
 
 
     <div class="container-fluid">
